--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -3,24 +3,18 @@ FROM docker.registry.verbio.com/python:3.10-slim
 ARG VERSION=0.0.1
 ARG LANGUAGE=en-us
 
-RUN apt-get update && apt-get install -y git build-essential wget apt-transport-https gnupg sudo
-RUN wget -O - https://pkg-repos.lan.verbio.com/gpg/internal/deb/F2EACE0B.gpg.key | sudo apt-key add - && \
-    echo 'deb https://pkg-repos.lan.verbio.com/deb/internal jessie stable' | sudo tee /etc/apt/sources.list.d/verbio-internal.list && \
-    echo 'deb https://pkg-repos.lan.verbio.com/deb/internal jessie staging' | sudo tee /etc/apt/sources.list.d/verbio-internal.list
 RUN apt-get update && apt-get install -y git build-essential
 
 
 COPY init.sh /init.sh
 COPY server.py /server.py
-COPY requirements.txt /requirements.txt
 COPY asr4-$VERSION-py3-none-any.whl /asr4-$VERSION-py3-none-any.whl
 COPY asr4-$LANGUAGE-$VERSION.onnx /asr4-$LANGUAGE.onnx
 COPY asr4-$LANGUAGE-$VERSION.dict.ltr.txt /dict.ltr.txt
 COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 
 RUN pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
-RUN pip install -r requirements.txt
 ENV MAKEFLAGS="-j4"
-RUN pip install asr4-$VERSION-py3-none-any.whl
+RUN pip install asr4-$VERSION-py3-none-any.whl[server]
 
 CMD [ "/init.sh" ]
