--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,13 +129,16 @@ python:build:latest_bin:
     - tags
   script:
     - export MAKEFLAGS="-j4"
-    - pip install wheel
+    - pip install wheel grpcio grpcio-tools
     - python setup.py sdist bdist_wheel
+    - python -m grpc_tools.protoc --proto_path=proto --include_imports --include_source_info --descriptor_set_out=proto/asr4-${DOCKER_IMAGE_VERSION}.pb asr4.proto
     - mv dist/*.whl .
+    - mv proto/*.pb .
   artifacts:
     expire_in: 2 days
     paths:
       - "*.whl"
+      - "*.pb"
 
 testing:docker:
   stage: docker
@@ -180,12 +183,6 @@ testing:deploy:
   environment:
     name: pre-production/asr4 
     action: start
-  before_script:
-    - apt-get update && apt-get install -y python3 python3-pip
-    - pip3 install grpcio grpcio-tools
-    # Build asr4.pb
-    - python3 -m grpc_tools.protoc --proto_path=proto --include_imports --include_source_info --descriptor_set_out=proto/asr4.pb asr4.proto
-    - cp proto/asr4.pb deploy/nomad
   script:
     - cd deploy/nomad
     - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
