Replace Gitlab artifact download URL as current one is not available until the whole pipeline succeeds.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,6 +127,8 @@ python:build:latest_bin:
   stage: build
   only:
     - tags
+  before_script:
+    - echo JOB_ID=$CI_JOB_ID >> job.env
   script:
     - export MAKEFLAGS="-j4"
     - pip install build grpcio grpcio-tools
@@ -139,6 +141,8 @@ python:build:latest_bin:
     paths:
       - "*.whl"
       - "*.pb"
+    reports:
+      dotenv: job.env
 
 testing:docker:
   stage: docker
@@ -182,12 +186,15 @@ testing:deploy:
   environment:
     name: pre-production/asr4 
     action: start
+  needs:
+    - job: python:build:latest_bin
+      artifacts: true
   script:
     - cd deploy/nomad
     - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
     - export NOMAD_ADDR=http://$NOMAD_IP:4646
     - echo "Deploying testing version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
-    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} nomad job run asr4-staging.nomad
+    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_ASR4_JOB_ID=${JOB_ID} nomad job run asr4-staging.nomad
 
 testing:promote:
   stage: testing-promote
@@ -234,10 +241,13 @@ release:deploy:
   image: docker.registry.verbio.com/cognitive/nomad:1.0.2
   only:
     - tags
+  needs:
+    - job: python:build:latest_bin
+      artifacts: true
   script:
     - echo "deploy new release in pre-production"
     - cd deploy/nomad
-#    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_STAGE=staging nomad job run asr4-staging.nomad
+#    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_STAGE=staging nomad job run asr4-staging.nomad
 
 
 cleanup:
