--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,13 @@ stages:
   - lint
   - test
   - build
-  - testing
-  - staging
-  - release
+  - testing-promote
+  - testing-integration
+  - staging-promote
+  - staging-deploy
+  - staging-e2e
+  - release-promote
+  - release-deploy
   - cleanup
 
 image: docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust:latest
@@ -135,15 +139,14 @@ python:build:latest_bin:
 
 
 testing:promote:
-  stage: testing
+  stage: testing-promote
   image: docker:20.10.15
   parallel:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
   only:
     - tags
-  dependencies:
-    - python:build:latest_bin     
+  needs: ["python:build:latest_bin"]
   script:
     - IMAGE_NAME="${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     - echo "IMAGE_NAME=${IMAGE_NAME}"
@@ -157,7 +160,7 @@ testing:promote:
     - docker push "${IMAGE_NAME}"
 
 testing:integration:
-  stage: testing
+  stage: testing-integration
   parallel:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
@@ -180,7 +183,7 @@ testing:integration:
 
 
 staging:promote:
-  stage: staging
+  stage: staging-promote
   image: docker:20.10.15
   parallel:
     matrix:
@@ -195,16 +198,14 @@ staging:promote:
     - docker push $NEW_NAME
 
 staging:deploy:
-  stage: staging
+  stage: staging-deploy
   image: docker.registry.verbio.com/cognitive/nomad:1.0.2
   only:
     - tags
+  needs: ["staging:promote", "python:build:latest_bin"]
   environment:
     name: pre-production/asr4 
     action: start
-  dependencies:
-    - python:build:latest_bin
-  needs: ["staging:promote"]
   script:
     - cd deploy/nomad
     - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
@@ -213,7 +214,7 @@ staging:deploy:
     - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-staging.nomad
 
 staging:e2e:
-  stage: staging
+  stage: staging-e2e
   image: "${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
   parallel:
     matrix:
@@ -226,7 +227,7 @@ staging:e2e:
 
 
 release:promote:
-  stage: release
+  stage: release-promote
   image: docker:20.10.15
   parallel:
     matrix:
@@ -241,13 +242,11 @@ release:promote:
     - docker push $NEW_NAME
 
 release:deploy:
-  stage: release
+  stage: release-deploy
   image: docker.registry.verbio.com/cognitive/nomad:1.0.2
   only:
     - tags
-  dependencies:
-    - python:build:latest_bin
-  needs: ["release:promote"]
+  needs: ["release:promote", "python:build:latest_bin"]
   script:
     - echo "deploy new release in pre-production"
     - cd deploy/nomad
