--- a/deploy/docker/Dockerfile.debian-gpu
+++ b/deploy/docker/Dockerfile.debian-gpu
@@ -3,9 +3,8 @@ FROM docker.registry.verbio.com/engineering/devops/debian10-citbx-cpp-rust-torch
 ARG VERSION=0.0.1
 ARG LANGUAGE=en-us
 
-RUN apt-get update && apt-get install -y git build-essential
+RUN apt-get update && apt-get install -y git build-essential ninja-build cmake
 
-SHELL ["/bin/bash", "-i", "-c"]
 
 COPY init.sh /init.sh
 COPY server.py /server.py
@@ -14,7 +13,11 @@ COPY asr4-$LANGUAGE-$VERSION.onnx /asr4-$LANGUAGE.onnx
 COPY asr4-$LANGUAGE-$VERSION.dict.ltr.txt /dict.ltr.txt
 COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 
+RUN pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 ENV MAKEFLAGS="-j4"
-RUN CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install asr4-$VERSION-py3-none-any.whl[server]
+
+RUN CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install asr4-$VERSION-py3-none-any.whl[server-gpu]
+RUN apt-get purge -y git build-essential ninja-build cmake
+RUN apt-get autoremove -y
 
 CMD [ "/init.sh" ]
