--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ variables:
 
 
 rust:lint:stable:
+  when: manual
   stage: lint
   image: docker.registry.verbio.com/rust/centos:stable
   script:
@@ -33,6 +34,7 @@ rust:lint:stable:
     - cargo clippy --all --all-targets -- -D warnings
 
 rust:lint:nightly:
+  when: manual
   stage: lint
   image: docker.registry.verbio.com/rust/centos:stable
   allow_failure: true
@@ -42,6 +44,7 @@ rust:lint:nightly:
     - cargo +nightly clippy --all --all-targets -- -D warnings
 
 python:lint:
+  when: manual
   stage: lint
   before_script:
     - pip install flake8==3.9.2 black==22.6.0
@@ -51,6 +54,7 @@ python:lint:
 
 
 rust:test:all:
+  when: manual
   stage: test
   image: docker.registry.verbio.com/rust/centos:stable
   script:
@@ -58,6 +62,7 @@ rust:test:all:
     - cargo test --all
 
 python:test:cpu:
+  when: manual
   stage: test
   before_script:
     - pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
@@ -72,6 +77,7 @@ python:test:cpu:
       junit: report.xml
 
 python:test:gpu:
+  when: manual
   stage: test
   tags:
     - gpu
@@ -90,6 +96,7 @@ python:test:gpu:
 
 
 rust:test:coverage:
+  when: manual
   stage: test
   before_script:
     - cargo install cargo-tarpaulin
@@ -102,6 +109,7 @@ rust:test:coverage:
   coverage: '/^(\d+\.\d*)\% coverage, .+$/'
 
 python:test:coverage:
+  when: manual
   stage: test
   before_script:
     - pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
@@ -116,6 +124,7 @@ python:test:coverage:
   coverage: '/^TOTAL\s+\d+\s+\d+\s+(\d+\.?\d*)\%$/'
 
 python-gpu:test:coverage:
+  when: manual
   stage: test
   tags:
     - gpu
@@ -134,9 +143,10 @@ python-gpu:test:coverage:
 
 
 rust:build:0.0.1_bin:
+  when: manual
   stage: build
-  only:
-    - tags
+#  only:
+#    - tags
   script:
     - cargo --version
     - cargo build --release
@@ -151,9 +161,10 @@ rust:build:0.0.1_bin:
       - "*.rpm"
 
 python:build:0.0.1_bin:
+  when: manual
   stage: build
-  only:
-    - tags
+#  only:
+#    - tags
   before_script:
     - echo JOB_ID=$CI_JOB_ID >> job.env
   script:
@@ -174,13 +185,14 @@ python:build:0.0.1_bin:
 
 
 .testing:promote:
+  when: manual
   stage: testing-promote
   image: docker:20.10.15
   parallel:
     matrix:
       - LANGUAGE: [en-us, es, pt-br]
-  only:
-    - tags
+#  only:
+#    - tags
   needs: ["python:build:0.0.1_bin"]
   script:
     - echo "IMAGE_NAME=${IMAGE_NAME}"
@@ -194,12 +206,14 @@ python:build:0.0.1_bin:
     - docker push "${IMAGE_NAME}"
 
 testing:promote:cpu:
+  when: manual
   variables:
     IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DOCKERFILE: "Dockerfile.debian"
   extends: .testing:promote
 
 testing:promote:gpu:
+  when: manual
   variables:
     IMAGE_NAME: "${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
     DOCKERFILE: "Dockerfile.debian-gpu"
@@ -208,8 +222,8 @@ testing:promote:gpu:
 
 .testing:integration:
   stage: testing-integration
-  only:
-    - tags
+#  only:
+#    - tags
   before_script:
     - pip install .[client,test]
   script:
@@ -220,186 +234,190 @@ testing:promote:gpu:
     reports:
       junit: report.xml
 
-.testing:integration:cpu:
-  extends: .testing:integration
-  needs: ["testing:promote:cpu"]
+#.testing:integration:cpu:
+#  extends: .testing:integration
+#  needs: ["testing:promote:cpu"]
 
 .testing:integration:gpu:
   extends: .testing:integration
-  needs: ["testing:promote:gpu"]
+#  needs: ["testing:promote:gpu"]
 
-testing:integration:en-us:cpu:
-  extends: .testing:integration:cpu
-  variables:
-    LANGUAGE: en-us
-  services:
-    - name: ${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
-      alias: asr4-server
-      variables:
-        LANGUAGE: en-us
+#testing:integration:en-us:cpu:
+#  extends: .testing:integration:cpu
+#  variables:
+#    LANGUAGE: en-us
+#  services:
+#    - name: ${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+#      alias: asr4-server
+#      command: ["python3", "server.py", "-j1", "-m", "asr4-en-us.onnx", "-d", "dict.ltr.txt", "-l", "en-us"]
 
-testing:integration:es:cpu:
-  extends: .testing:integration:cpu
-  variables:
-    LANGUAGE: es
-  services:
-    - name: ${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
-      alias: asr4-server
-      variables:
-        LANGUAGE: es
-
-testing:integration:pt-br:cpu:
-  extends: .testing:integration:cpu
-  variables:
-    LANGUAGE: pt-br
-  services:
-    - name: ${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
-      alias: asr4-server
-      variables:
-        LANGUAGE: pt-br
+#testing:integration:es:cpu:
+#  extends: .testing:integration:cpu
+#  variables:
+#    LANGUAGE: es
+#  services:
+#    - name: ${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+#      alias: asr4-server
+#      command: ["python3", "server.py", "-j1", "-m", "asr4-es.onnx", "-d", "dict.ltr.txt", "-l", "es"]
+#
+#testing:integration:pt-br:cpu:
+#  extends: .testing:integration:cpu
+#  variables:
+#    LANGUAGE: pt-br
+#  services:
+#    - name: ${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+#      alias: asr4-server
+#      command: ["python3", "server.py", "-j1", "-m", "asr4-pt-br.onnx", "-d", "dict.ltr.txt", "-l", "pt-br"]
 
 testing:integration:en-us:gpu:
   extends: .testing:integration:gpu
-  tags:
-    - gpu
   variables:
     LANGUAGE: en-us
-  services:
-    - name: ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
-      alias: asr4-server
-      variables:
-        LANGUAGE: en-us
-
-testing:integration:es:gpu:
-  extends: .testing:integration:gpu
   tags:
     - gpu
-  variables:
-    LANGUAGE: es
   services:
-    - name: ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+#    - name: ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+    - name: ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:0.0.13
       alias: asr4-server
-      variables:
-        LANGUAGE: es
+      command: nvidia-smi
+#      variables:
+#        LANGUAGE: en-us
 
-testing:integration:pt-br:gpu:
-  extends: .testing:integration:gpu
-  tags:
-    - gpu
-  variables:
-    LANGUAGE: pt-br
-  services:
-    - name: ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
-      alias: asr4-server
-      variables:
-        LANGUAGE: pt-br
-
-staging:promote:
-  stage: staging-promote
-  image: docker:20.10.15
-  parallel:
-    matrix:
-      - LANGUAGE: [en-us, es, pt-br]
-  only:
-    - tags
-  needs: ["testing:integration:en-us:cpu", "testing:integration:es:cpu", "testing:integration:pt-br:cpu", "testing:integration:en-us:gpu", "testing:integration:es:gpu", "testing:integration:pt-br:gpu"]
-  script:
-    - OLD_NAME="${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_NAME="${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker tag $OLD_NAME $NEW_NAME
-    - docker push $NEW_NAME
-    - OLD_NAME="${DOCKER_TESTING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_NAME="${DOCKER_STAGING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker tag $OLD_NAME $NEW_NAME
-    - docker push $NEW_NAME
-
-#tbd: where do we deploy with GPU
-
-staging:deploy:
-  stage: staging-deploy
-  image: docker.registry.verbio.com/cognitive/nomad:1.0.2
-  only:
-    - tags
-  needs: ["staging:promote", "python:build:0.0.1_bin"]
-  environment:
-    name: pre-production/asr4
-    action: start
-  script:
-    - cd deploy/nomad
-    - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
-    - export NOMAD_ADDR=http://$NOMAD_IP:4646
-    - echo "Deploying staging version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
-    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-staging.nomad
-
-staging:e2e:cpu:
-  stage: staging-e2e
-  image: "${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-  parallel:
-    matrix:
-      - LANGUAGE: [en-us, es, pt-br]
-  only:
-    - tags
-  needs: ["staging:deploy"]
-  script:
-    - echo "E2E tests for new release"
-
-staging:e2e:gpu:
-  stage: staging-e2e
-  tags:
-    - gpu
-  image: "${DOCKER_STAGING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-  parallel:
-    matrix:
-      - LANGUAGE: [en-us, es, pt-br]
-  only:
-    - tags
-  needs: ["staging:deploy"]
-  script:
-    - echo "E2E tests for new release"
-
-release:promote:
-  stage: release-promote
-  image: docker:20.10.15
-  parallel:
-    matrix:
-      - LANGUAGE: [en-us, es, pt-br]
-  only:
-    - tags
-  needs: ["staging:e2e:cpu", "staging:e2e:gpu"]
-  script:
-    - OLD_NAME="${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_NAME="${DOCKER_RELEASE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker tag $OLD_NAME $NEW_NAME
-    - docker push $NEW_NAME
-    - OLD_NAME="${DOCKER_STAGING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - NEW_NAME="${DOCKER_RELEASE_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker tag $OLD_NAME $NEW_NAME
-    - docker push $NEW_NAME
-
-release:deploy:
-  stage: release-deploy
-  image: docker.registry.verbio.com/cognitive/nomad:1.0.2
-  only:
-    - tags
-  needs: ["release:promote", "python:build:0.0.1_bin"]
-  script:
-    - echo "deploy new release in pre-production"
-    - cd deploy/nomad
-    # - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} NOMAD_VAR_STAGE=staging nomad job run asr4-staging.nomad
+#testing:integration:es:gpu:
+#  extends: .testing:integration:gpu
+#  tags:
+#    - gpu
+#  variables:
+#    LANGUAGE: es
+#  services:
+#    - name: ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+#      alias: asr4-server
+#      #command: ["python3", "server.py", "-j1", "-m", "asr4-es.onnx", "-d", "dict.ltr.txt", "-l", "es"]
+#      variables:
+#        LANGUAGE: es
+#
+#testing:integration:pt-br:gpu:
+#  extends: .testing:integration:gpu
+#  tags:
+#    - gpu
+#  variables:
+#    LANGUAGE: pt-br
+#  services:
+#    - name: ${DOCKER_TESTING_IMAGE_NAME}-gpu-${LANGUAGE}:${DOCKER_IMAGE_VERSION}
+#      alias: asr4-server
+#      #command: ["python3", "server.py", "-j1", "-m", "asr4-pt-br.onnx", "-d", "dict.ltr.txt", "-l", "pt-br"]
+#      variables:
+#        LANGUAGE: pt-br
 
 
-cleanup:
-  stage: cleanup
-  image: docker:20.10.15
-  parallel:
-    matrix:
-      - LANGUAGE: [en-us, es, pt-br]
-  only:
-    - tags
-  script:
-    - docker image rm "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_RELEASE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_TESTING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_STAGING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
-    - docker image rm "${DOCKER_RELEASE_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+
+#staging:promote:
+#  stage: staging-promote
+#  image: docker:20.10.15
+#  parallel:
+#    matrix:
+#      - LANGUAGE: [en-us, es, pt-br]
+#  only:
+#    - tags
+#  needs: ["testing:integration:en-us:cpu", "testing:integration:es:cpu", "testing:integration:pt-br:cpu", "testing:integration:en-us:gpu", "testing:integration:es:gpu", "testing:integration:pt-br:gpu"]
+#  script:
+#    - OLD_NAME="${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - NEW_NAME="${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - docker tag $OLD_NAME $NEW_NAME
+#    - docker push $NEW_NAME
+#    - OLD_NAME="${DOCKER_TESTING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - NEW_NAME="${DOCKER_STAGING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - docker tag $OLD_NAME $NEW_NAME
+#    - docker push $NEW_NAME
+#
+##tbd: where do we deploy with GPU
+#
+#staging:deploy:
+#  stage: staging-deploy
+#  image: docker.registry.verbio.com/cognitive/nomad:1.0.2
+#  only:
+#    - tags
+#  needs: ["staging:promote", "python:build:0.0.1_bin"]
+#  environment:
+#    name: pre-production/asr4
+#    action: start
+#  script:
+#    - cd deploy/nomad
+#    - export NOMAD_IP=$(echo ${CI_ENVIRONMENT_URL} | cut -d / -f 3 | cut -d ':' -f 1)
+#    - export NOMAD_ADDR=http://$NOMAD_IP:4646
+#    - echo "Deploying staging version ${DOCKER_IMAGE_VERSION} into ${NOMAD_ADDR}"
+#    - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} nomad job run asr4-staging.nomad
+#
+#staging:e2e:cpu:
+#  stage: staging-e2e
+#  image: "${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#  parallel:
+#    matrix:
+#      - LANGUAGE: [en-us, es, pt-br]
+#  only:
+#    - tags
+#  needs: ["staging:deploy"]
+#  script:
+#    - echo "E2E tests for new release"
+#
+#staging:e2e:gpu:
+#  stage: staging-e2e
+#  tags:
+#    - gpu
+#  image: "${DOCKER_STAGING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#  parallel:
+#    matrix:
+#      - LANGUAGE: [en-us, es, pt-br]
+#  only:
+#    - tags
+#  needs: ["staging:deploy"]
+#  script:
+#    - echo "E2E tests for new release"
+#
+#release:promote:
+#  stage: release-promote
+#  image: docker:20.10.15
+#  parallel:
+#    matrix:
+#      - LANGUAGE: [en-us, es, pt-br]
+#  only:
+#    - tags
+#  needs: ["staging:e2e:cpu", "staging:e2e:gpu"]
+#  script:
+#    - OLD_NAME="${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - NEW_NAME="${DOCKER_RELEASE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - docker tag $OLD_NAME $NEW_NAME
+#    - docker push $NEW_NAME
+#    - OLD_NAME="${DOCKER_STAGING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - NEW_NAME="${DOCKER_RELEASE_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - docker tag $OLD_NAME $NEW_NAME
+#    - docker push $NEW_NAME
+#
+#release:deploy:
+#  stage: release-deploy
+#  image: docker.registry.verbio.com/cognitive/nomad:1.0.2
+#  only:
+#    - tags
+#  needs: ["release:promote", "python:build:0.0.1_bin"]
+#  script:
+#    - echo "deploy new release in pre-production"
+#    - cd deploy/nomad
+#    # - NOMAD_VAR_VERSION=${DOCKER_IMAGE_VERSION} NOMAD_VAR_ASR4_JOB_ID=${JOB_ID} NOMAD_VAR_GITLAB_TOKEN=${GITLAB_TOKEN} NOMAD_VAR_STAGE=staging nomad job run asr4-staging.nomad
+#
+#
+#cleanup:
+#  stage: cleanup
+#  image: docker:20.10.15
+#  parallel:
+#    matrix:
+#      - LANGUAGE: [en-us, es, pt-br]
+#  only:
+#    - tags
+#  script:
+#    - docker image rm "${DOCKER_TESTING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - docker image rm "${DOCKER_STAGING_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - docker image rm "${DOCKER_RELEASE_IMAGE_NAME}-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - docker image rm "${DOCKER_TESTING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - docker image rm "${DOCKER_STAGING_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+#    - docker image rm "${DOCKER_RELEASE_IMAGE_NAME}-GPU-${LANGUAGE}:${DOCKER_IMAGE_VERSION}"
+
