--- a/deploy/docker/Dockerfile.debian
+++ b/deploy/docker/Dockerfile.debian
@@ -16,7 +16,7 @@ COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 RUN pip install torch==1.12.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
 ENV MAKEFLAGS="-j4"
 
-RUN pip install asr4-$VERSION-py3-none-any.whl[server]
+RUN pip install asr4-$VERSION-py3-none-any.whl[server,cpu]
 RUN apt-get purge -y git build-essential ninja-build cmake
 RUN apt-get autoremove -y
 
