--- a/deploy/docker/Dockerfile.debian-gpu
+++ b/deploy/docker/Dockerfile.debian-gpu
@@ -14,7 +14,7 @@ COPY format-model.$LANGUAGE-*.fm /format-model.$LANGUAGE.fm
 
 ENV MAKEFLAGS="-j4"
 
-RUN CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install asr4-$VERSION-py3-none-any.whl[server-gpu]
+RUN CUDACXX=/usr/local/cuda/bin/nvcc LDFLAGS="-L/root/miniconda3/lib/ -liomp5" pip install asr4-$VERSION-py3-none-any.whl[server,gpu]
 
 RUN apt-get purge -y git build-essential ninja-build cmake
 RUN apt-get autoremove -y
